<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Kaseb</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="kaseb_hadith">Businessman Habib Allah</string>
    <string name="kaseb_name">Ali Ghorbani</string>
    <string name="title_customer">Customers</string>
    <string name="title_Debtors">Debators</string>
    <string name="title_invoice">Invoices</string>
    <string name="title_debtors">Debators</string>
    <string name="title_sales">Sales</string>
    <string name="title_costs">Costs</string>
    <string name="title_products">Products</string>
    <string name="title_setting">Setting</string>
    <string name="title_about_us">About us</string>
    <string name="title_activity_customers">Customers</string>
    <string name="label_total_sale">Total Sale($)</string>
    <string name="label_total_customer_purchase">Purchase</string>
    <string name="label_total_customer_debt">Debt</string>
    <string name="sample_text_debt_of_customer_amount">800</string>
    <string name="sample_text_purchase_of_customer_amount">1,500,000</string>
    <string name="sample_ali_ghorbani">Ali Ghorbani</string>
    <string name="sample_mohammad_alikhani">Mohammad AliKhani</string>
    <string name="sample_sima_saberzadeh">Sima Saberzadeh</string>
    <string name="format_purchase_amount"><xliff:g id="purchase_amount">%1$s</xliff:g> $</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search customers</string>
    <string name="sort_alphabetic">Alphabetic</string>
    <string name="sort_membership">Membership</string>
    <string name="sort_title">Sort</string>
    <string name="fab_add_sale">Add sale</string>
    <string name="fab_add_customer">Add customer</string>
    <string name="sample_invoice_code">12420</string>
    <string name="sample_invoice_ballance">1200000</string>
    <string name="sample_due_date_1_day">6/27/16</string>
    <string name="column_title_account_balance">Balance($)</string>
    <string name="column_title_Bill_code">Code</string>
    <string name="column_title_day_of_maturity">Due date</string>
    <string name="sample_2_invoice_code">13120</string>
    <string name="sample_due_date_2_day">8/27/16</string>
    <string name="sample_invoice_2_ballance">300000</string>
    <string name="title_debator">Debators</string>
    <string name="debtor_share_text_to_send">your total balance is: </string>
    <string name="title_activity_sales">Sales</string>
    <string name="sort_date">Date</string>
    <string name="sort_code">Sales code</string>
    <string name="sample_sale_code">INV-000123</string>
    <string name="header_this_week">This week</string>
    <string name="header_older">Older</string>
    <string name="header_today">Today</string>
    <string name="header_this_month">This month</string>
    <string name="title_activity_costs">Costs</string>
    <string name="fab_add_cost">Add cost</string>
    <string name="sort_cost_code">Cost code</string>
    <string name="sample_cost_name">personnel salary</string>
    <string name="sample_cost_name_2">phone bill</string>
    <string name="sample_cost_name_3">dinner</string>
    <string name="sample_cost_name_4">transport</string>
    <string name="title_activity_products">Products</string>
    <string name="fab_add_product">Add product</string>
    <string name="sort_product_code">products code</string>
    <string name="sample_product_name">Samsung GE7</string>
    <string name="sample_product_name_2">Samsung GA7</string>
    <string name="sample_product_name_3">Samsung GJ7</string>
    <string name="sample_product_name_4">Samsung GA5</string>
    <string name="sample_product_name_5">Samsung GJ5</string>
    <string name="sample_product_name_6">Samsung GN5</string>
    <string name="cupcake_ipsum">Cupcake ipsum dolor sit amet. Cheesecake sugar plum bear claw. Bonbon sesame snaps icing jelly pudding. Bonbon halvah gingerbread bonbon candy. Gummi bears cookie brownie chupa chups jujubes icing cake. Donut powder oat cake marshmallow dessert gummies. Cupcake macaroon gingerbread soufflé tootsie roll gummi bears. Sweet jujubes liquorice chocolate cake. Dessert pudding ice cream muffin candy canes. Donut carrot cake marzipan pastry topping powder. Cake topping jelly dessert gingerbread chocolate cake dessert ice cream jelly beans. Muffin toffee bonbon gingerbread halvah. Cheesecake icing danish pie candy chupa chups icing.\n\nCandy liquorice macaroon. Caramels sugar plum dragée macaroon gummies liquorice. Cake gummi bears cookie brownie tiramisu jelly beans pie apple pie. Sesame snaps pastry pudding apple pie gummi bears fruitcake macaroon jelly-o jelly-o. Gummies oat cake brownie pudding wafer chocolate cake lollipop chocolate cake. Chocolate lemon drops cake cake dessert jujubes halvah. Cake muffin pie gummies gummi bears dragée sesame snaps. Jelly-o jelly jelly. Croissant biscuit tootsie roll sweet roll sweet roll ice cream marzipan. Candy biscuit cheesecake lollipop jelly pie dragée powder cotton candy. Gummi bears cake pastry biscuit dessert fruitcake powder sweet lollipop. Apple pie cotton candy pie. Powder toffee candy cookie fruitcake gingerbread marzipan caramels tiramisu. Fruitcake marshmallow caramels biscuit.\n\nBear claw cake brownie bonbon oat cake sweet roll soufflé. Apple pie liquorice tootsie roll lemon drops candy jujubes croissant liquorice. Icing sugar plum pudding lemon drops donut macaroon wafer. Cupcake apple pie chocolate. Cupcake jelly beans chupa chups pie wafer. Tart dessert sugar plum candy canes sesame snaps sweet roll. Oat cake chupa chups macaroon powder powder chocolate bar. Jelly topping carrot cake liquorice jelly-o. Lemon drops candy chupa chups donut sweet roll. Gummi bears marzipan cupcake tootsie roll toffee. Candy gingerbread jujubes halvah tart cheesecake. Tiramisu cake jujubes chocolate bar jelly lemon drops lollipop.\n\nBiscuit jelly-o tart croissant sesame snaps sweet sugar plum cake lemon drops. Topping carrot cake sesame snaps donut. Sweet roll chocolate cake chocolate toffee toffee gummies. Danish powder carrot cake. Pudding liquorice toffee lollipop wafer jelly beans wafer. Lollipop gummies biscuit pastry marshmallow tiramisu cake candy canes. Jujubes jujubes brownie. Chupa chups halvah tiramisu fruitcake tiramisu donut oat cake gingerbread dessert. Croissant wafer oat cake chocolate. Tart candy pudding cotton candy gingerbread sweet. Liquorice icing croissant biscuit tiramisu sugar plum. Tootsie roll chocolate pie jujubes croissant danish danish icing. Ice cream lollipop chocolate. Cake macaroon sugar plum sweet.\n\nDonut bonbon lollipop danish brownie danish carrot cake. Tootsie roll tiramisu marshmallow candy canes gingerbread topping muffin sesame snaps. Sweet jujubes cupcake gummies. Carrot cake pastry candy canes icing jelly toffee. Carrot cake sugar plum caramels carrot cake. Sesame snaps marshmallow brownie macaroon sweet roll. Cake gummi bears tart chocolate bar tart powder cake toffee sweet. Fruitcake jelly-o jujubes chupa chups sweet roll sweet roll bear claw macaroon. Sweet roll gummies jelly beans powder powder brownie macaroon. Lollipop tart croissant sugar plum sesame snaps sweet cheesecake icing sweet. Jujubes gummi bears oat cake pastry muffin fruitcake. Fruitcake gingerbread chocolate cake. Pie tart cookie donut marzipan cookie. Pudding chupa chups brownie oat cake jelly sweet.</string>
    <string name="customer_dash_membership">Membership</string>
    <string name="customer_dash_purchase_amount">Total purchase</string>
    <string name="customer_dash_total_balance">Balance</string>
    <string name="customer_dash_number_purchase">No.Purcahse</string>
    <string name="customer_tab_info">Info</string>
    <string name="customer_tab_dash">Dashboard</string>
    <string name="customer_tab_bill">Bills</string>
    <string name="back_arrow">back</string>
    <string name="edit_action_description">This icon let you modify customer data</string>
    <string name="set_membership">set membership</string>
    <string name="gold_member">Gold Member</string>
    <string name="silver_memer">Silver Member</string>
    <string name="bronze_member">Bronze Member</string>
    <string name="non_member">no member</string>
    <string name="title_activity_detail_sale">DetailSale</string>
    <string name="detail_sales_products_items_header">Items list</string>
    <string name="detail_sales_payment_header">Payments</string>
    <string name="detail_sales_taxDiscount_header">Other Items</string>
    <string name="detail_sales_summary_header">Summary</string>
    <string name="detail_sales_summary_customer_code">Customer</string>
    <string name="detail_sales_summary_total_amount">Total amount</string>
    <string name="detail_sales_summary_total_balance">Balance</string>
    <string name="payment_model_cash">cash</string>
    <string name="payment_model_pos" translatable="false">POS</string>
    <string name="payment_model_cheque">Cheque</string>
    <string name="payment_model_credit">Credit</string>
    <string name="sale_tax_tax_stick">Tax</string>
    <string name="sale_tax_off_stick">Discount</string>
    <string name="detail_sales_summary_tax">Tax</string>
    <string name="detail_sales_summary_discount">Discount</string>
    <string name="detail_sales_summary_final_amount">Final amount</string>
    <string name="detail_sales_summary_payment">Payed</string>
    <string name="print_detail_sale_action_description">it prints your sale detail description and make a picture in your gallery</string>
    <string name="fab_add_payment">Add payment</string>
    <string name="fab_add_tax">Add tax</string>
    <string name="fab_add_discount">Add discount</string>
    <string name="edit_detail_sale_action_description">it let you edit your saved invoice</string>
    <string name="print_button">print</string>
    <string name="save">save</string>
    <string name="save_detail_sale_action_description">it let you save your changes</string>
</resources>
