<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
    android:id="@+id/debtor_history_invoice_code"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    style="@style/debator_table_cell_text"
    android:layout_weight="1"
    android:text="@string/sample_invoice_code"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
    android:id="@+id/debtor_history_due_date"
    style="@style/debator_table_cell_text"
    android:layout_weight="1"
    android:text="@string/sample_due_date_1_day"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
    android:id="@+id/debtor_history_balance"
    style="@style/debator_table_cell_text"
    android:layout_weight="2"
    android:text="@string/sample_invoice_ballance"/>

</LinearLayout>