<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="88dp"
    android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingRight="4dp"
    android:paddingEnd="4dp"
    >
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        >
        <ScrollView
            android:layout_width="0dp"
            android:layout_weight="1.5f"
            android:layout_height="80dp"
            >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:src="@drawable/kaseb_pic"
            />

        </ScrollView>
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/item_list_sale_customer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kaseb_name"
            android:layout_marginLeft="@dimen/item_horizontal_margin"
            android:layout_marginStart="@dimen/item_horizontal_margin"
            android:fontFamily="sans-serif-condensed"
            android:maxLength="14"
            android:textAppearance="?android:textAppearanceMedium"
            />
        <TextView
            android:id="@+id/item_list_sale_code"
            android:layout_marginLeft="@dimen/item_horizontal_margin"
            android:layout_marginStart="@dimen/item_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceSmall"
            android:text="@string/sample_sale_code"/>
</LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
        <TextView
            android:id="@+id/item_list_sale_purchase_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="@dimen/item_horizontal_margin"
            android:layout_marginStart="@dimen/item_horizontal_margin"
            android:text="@string/sample_text_purchase_of_customer_amount"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceLarge"
            />
            <TextView
                android:id="@+id/item_list_sale_due_date"
                android:layout_marginLeft="@dimen/item_horizontal_margin"
                android:layout_marginStart="@dimen/item_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceSmall"
                android:text="@string/sample_due_date_1_day"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>