<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="@dimen/activity_vertical_Large_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="4"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mjkarbasian.moshtarimadar.DetailSale"
    tools:showIn="@layout/activity_detail_sale">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">
    <android.support.v7.widget.CardView
    android:id="@+id/card_detail_sale_items_list"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginTop="@dimen/activity_vertical_margin"
        android:nestedScrollingEnabled="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="4dp"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/detail_sales_products_items_header"/>
        <ListView
            android:id="@+id/listview_sale_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></ListView>
    </LinearLayout>

</android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_detail_sale_payments"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="4dp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/detail_sales_payment_header"/>
            <ListView
                android:id="@+id/listview_sale_payments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></ListView>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/card_detail_sale_tax_discounts"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:padding="4dp"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/detail_sales_taxDiscount_header"/>
                <ListView
                    android:id="@+id/listview_sale_tax_discount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></ListView>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_detail_sale_summary"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:padding="4dp"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/detail_sales_summary_header"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:textColor="@color/black_text"
                            android:text="@string/detail_sales_summary_customer_code"
                            />
                        <TextView
                            android:id="@+id/card_detail_sale_customer_code"
                            android:layout_width="match_parent"
                            android:layout_height="fill_parent"
                            android:textAppearance="?android:textAppearanceSmall"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:textColor="@color/black_text"
                            android:text="@string/detail_sales_summary_total_amount"
                            />
                        <TextView
                            android:id="@+id/card_detail_sale_total_amount"
                            android:layout_width="match_parent"
                            android:layout_height="fill_parent"
                            android:textAppearance="?android:textAppearanceSmall"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:textColor="@color/black_text"
                            android:text="@string/detail_sales_summary_total_balance"
                            />
                        <TextView
                            android:id="@+id/card_detail_sale_total_balance"
                            android:layout_width="match_parent"
                            android:layout_height="fill_parent"
                            android:textAppearance="?android:textAppearanceMedium"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>

</LinearLayout>